--- a/starter/apps/hello-world/hello.yml
+++ b/starter/apps/hello-world/hello.yml
@@ -26,6 +26,7 @@ spec:
             httpGet:
               port: 9000
               path: /nginx_status
+              path: /healthz
             initialDelaySeconds: 2
             periodSeconds: 2
       nodeSelector:
